--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
+    "axios": "^0.21.1",
     "flatpickr": "^4.6.9",
     "normalize-scss": "^7.0.1",
+    "notyf": "^3.9.0",
     "stimulus": "^2.0.0",
     "trix": "^1.3.1",
     "ts-debounce": "^3.0.0",
